--- a/example-stack/pom.xml
+++ b/example-stack/pom.xml
@@ -3,16 +3,15 @@
          xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.myorg</groupId>
-    <artifactId>example-cdk-from-lambda</artifactId>
+    <parent>
+        <groupId>com.myorg</groupId>
+        <artifactId>example-cdk-from-lambda</artifactId>
+        <version>0.1</version>
+    </parent>
+
+    <artifactId>example-stack</artifactId>
     <version>0.1</version>
-
-    <modules>
-        <module>example-stack</module>
-        <module>run-cdk-lambda</module>
-    </modules>
-
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -41,4 +40,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>software.amazon.awscdk</groupId>
+            <artifactId>aws-cdk-lib</artifactId>
+            <version>${cdk.version}</version>
+        </dependency>
+    </dependencies>
 </project>
